force-app/main/default/objects/Formulario_gestion__c/Formulario_gestion__c.object-meta.xml
<CustomObject>
    <label>Formulario de Gestion</label>
    <nameField>
        <label>Nombre de Formulario</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formularios de Gestion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>