force-app/main/default/objects/Formulario_gestion__c/fields/Autoriza_Envio__c.field-meta.xml
<CustomField>
    <fullName>Autoriza_Envio__c</fullName>
    <label>Autoriza Envio de MM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pediatricos</fullName>
            </value>
            <value>
                <fullName>Metabolicos</fullName>
            </value>
            <value>
                <fullName>Dieta Cetogenica</fullName>
            </value>
            <value>
                <fullName>Coordinacion APM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>