force-app/main/default/objects/Formulario_gestion__c/fields/Caso_de_Gestion__c.field-meta.xml
<CustomField>
    <fullName>Caso_de_Gestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso de Gestion</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Formularios de Gestion</relationshipLabel>
    <relationshipName>Formularios_de_Gestion</relationshipName>
    <type>Lookup</type>
</CustomField>