force-app/main/default/objects/Formulario_gestion__c/fields/Dias_de_tratamiento_cubiertos_con_la_MM__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_tratamiento_cubiertos_con_la_MM__c</fullName>
    <label>Dias de tratamiento cubiertos con la MM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Dia</fullName>
            </value>
            <value>
                <fullName>2 Dias</fullName>
            </value>
            <value>
                <fullName>3 Dias</fullName>
            </value>
            <value>
                <fullName>4 Dias</fullName>
            </value>
            <value>
                <fullName>5 Dias</fullName>
            </value>
            <value>
                <fullName>7 Dias</fullName>
            </value>
            <value>
                <fullName>10 Dias</fullName>
            </value>
            <value>
                <fullName>14 Dias</fullName>
            </value>
            <value>
                <fullName>+ 14 Dias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>