force-app/main/default/objects/Formulario_gestion__c/fields/Fue_derivado_a_la_ONG__c.field-meta.xml
<CustomField>
    <fullName>Fue_derivado_a_la_ONG__c</fullName>
    <label>Fue derivado a la ONG?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>