force-app/main/default/objects/Formulario_gestion__c/fields/Nro_de_Tramite__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_Tramite__c</fullName>
    <label>Nro de Tramite</label>
    <type>TextArea</type>
</CustomField>