force-app/main/default/objects/Formulario_gestion__c/fields/Obra_Social_Tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Obra_Social_Tratamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra Social</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tratamiento__c.Activo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tratamiento__c</referenceTo>
    <relationshipLabel>Formularios de Gestion</relationshipLabel>
    <relationshipName>Formularios_de_Gestion</relationshipName>
    <type>Lookup</type>
</CustomField>