force-app/main/default/objects/Formulario_gestion__c/fields/Profesional_Tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Profesional_Tratamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profesional</label>
    <referenceTo>Tratamiento__c</referenceTo>
    <relationshipLabel>Formularios de Gestion (Profesional)</relationshipLabel>
    <relationshipName>Formularios_de_Gestion1</relationshipName>
    <type>Lookup</type>
</CustomField>