force-app/main/default/objects/Formulario_gestion__c/fields/Tiene_stock_para__c.field-meta.xml
<CustomField>
    <fullName>Tiene_stock_para__c</fullName>
    <label>Tiene stock para</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Dia</fullName>
            </value>
            <value>
                <fullName>2 Dias</fullName>
            </value>
            <value>
                <fullName>3 Dias</fullName>
            </value>
            <value>
                <fullName>4 Dias</fullName>
            </value>
            <value>
                <fullName>5 Dias</fullName>
            </value>
            <value>
                <fullName>7 Dias</fullName>
            </value>
            <value>
                <fullName>10 Dias</fullName>
            </value>
            <value>
                <fullName>+ 14 Dias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>